--- a/Ressources/CSS/Style.css
+++ b/Ressources/CSS/Style.css
@@ -40,12 +40,10 @@ header{
     height: auto;
     margin-right:auto;
     margin-left:auto;
-    margin-top:10px;
 }
 
 #nav_header{
     vertical-align:top;
-    margin-top:5px;
 }
 #nav_header ul{
     margin-left:10px;
@@ -54,7 +52,7 @@ header{
 #nav_header li { 
     padding-right:20px;
     padding-left:20px;
-    height:44px;
+    height:40px;
     font-weight:bold;
     text-align:center;
     display: table-cell;
@@ -63,7 +61,7 @@ header{
 
 #nav_home {
     background: url('../Images/home.png') no-repeat;
-    background-size:60% 60%;
+    background-size:50% 50%;
     background-position: center center;
 }
 
@@ -103,7 +101,7 @@ header{
 #submain_pub {   
     width:100%;
     height:90px;
-    margin-bottom:20px;        
+    margin-bottom:10px;        
     background: url('../Images/Billabong_pub.jpg') no-repeat white;
     background-position: center center;
 }
@@ -148,15 +146,12 @@ header{
     border-bottom:black 1px dashed;
 }
 
-#article_une_titre {
+#article_une h2{
+    text-transform:uppercase;
     text-align: center;
     padding:5px;
     margin-bottom:5px;
     margin-top:5px;
-}
-
-#article_une_titre h2{
-    text-transform:uppercase;
 }
 
 #article_une_image {
@@ -191,16 +186,16 @@ header{
     opacity:0.9;
 }
 
-#article_une_debut {
+#article_une p {
     text-align: justify;
-    padding:10px;   
+    padding-left:10px;
+    padding-right:10px;
 }
 
 .article {
     min-height:200px;;
     padding-bottom:15px;
     padding-right:10px;
-    border-bottom: black 1px dashed;
 }
 
 .article_image_ref {
@@ -224,7 +219,7 @@ header{
     color:white;    
 }
 
-.article h3 {
+.article h2 {
     text-align:center;
 }
 
@@ -260,22 +255,40 @@ header{
     vertical-align:top;
 }
 
+#login_pub {
+    height:146px;
+    border:1px black dashed;
+}
+
 #login fieldset{
     margin-top:10px;
     margin-bottom:20px;
     text-align: center;  
 }
 
+
 #Pub1 {
     height:250px;
-    margin-bottom:50px;
+    margin-bottom:20px;
     margin-top:20px;
     background: url('../Images/pub_carre.jpg') no-repeat;
     background-size:100% 100%;
 }
 
+#dossier {
+    background-color:activecaption;
+}
+
+#dossier h2{
+    width:100%;
+    background-color: grey;
+    margin-bottom:5px;
+    color:white;
+    text-align:center;
+}
+
 .Dossier{
-    margin-bottom:20px;
+    margin-bottom:15px;
     text-align: center;
     background: url('../Images/trotinnette.jpg') no-repeat;
     height:250px
@@ -288,6 +301,10 @@ header{
 
 .dossier_titre h3{
     margin:0px;
+}
+
+#submain_section_sport {
+    margin-bottom:5px;    
 }
 
 footer {
