--- a/Ressources/CSS/Style.css
+++ b/Ressources/CSS/Style.css
@@ -5,6 +5,7 @@
     Description:
         Purpose of the stylesheet follows.
 */
+
 h2{
     margin:0px;
 }
@@ -19,20 +20,29 @@ root {
 }
 
 body {
-    background: url('../Images/diamond.jpg') no-repeat #e6e6e6;
-    background-position: center 220px;
-    background-size: 1250px 1250px;
     margin:0px;
-
+    background: url('../Images/diamond.jpg') no-repeat #e6e6e6;
+    background-position: center 0px;
+    background-size: 1250px 1250px; 
 }
+
+ /* #pub_fond {
+    background: url('../Images/diamond.jpg') no-repeat #e6e6e6;
+    background-position: center;
+    background-size: 100% 100%;  
+    position:absolute;
+    left:auto;
+    right:auto;
+    width:1250px;
+    height:1250px;
+    z-index:1;
+} */
 
 #menu_login {
     background-color:#2fafb2;
-    z-index:99;
 }
 
 #header_wrapper {
-    background-color:white;
 }
 
 header{
@@ -40,29 +50,23 @@ header{
     height: auto;
     margin-right:auto;
     margin-left:auto;
+    background-color:white;
 }
 
 #nav_header{
     vertical-align:top;
 }
 #nav_header ul{
-    margin-left:10px;
 }
 
 #nav_header li { 
-    padding-right:20px;
-    padding-left:20px;
+    padding-right:15px;
+    padding-left:15px;
     height:40px;
     font-weight:bold;
     text-align:center;
     display: table-cell;
     vertical-align: middle;
-}
-
-#nav_home {
-    background: url('../Images/home.png') no-repeat;
-    background-size:50% 50%;
-    background-position: center center;
 }
 
 #banniere{
@@ -72,12 +76,37 @@ header{
     background-size:86% 100%;
 }
 
+#rechercher {
+    float:right;
+    vertical-align:middle;
+    padding:1px;
+}
+
+#rechercher p {
+    text-align:center;    
+}
+
+#rechercher .loupe{
+    height:20px;
+    vertical-align: middle;
+    font-weight: bold;
+    font-size:80%;
+}
+
+#rechercher .search{
+    height:14px;   
+    text-align:justify;
+    width:100px;
+    vertical-align: middle;
+}
+
 #recherche {  
     margin-bottom:5px;
 }
 
 #recherche form{
     margin-left:30px;
+
 }
 
 #creer_profil {  
@@ -96,6 +125,8 @@ header{
     margin-right:auto;
     margin-left:auto;
     background-color:white;
+    position:relative;
+    z-index:999;
 }
 
 #submain_pub {   
@@ -111,6 +142,8 @@ header{
     color:white;
     height:25px;
     margin-bottom:10px;
+    display:inline-block;
+    width:100%;
 }
 
 #submain_nav ul {
@@ -258,6 +291,8 @@ header{
 #login_pub {
     height:146px;
     border:1px black dashed;
+    width:100%;
+    height:100%;
 }
 
 #login fieldset{
