--- a/Ressources/CSS/Style.css
+++ b/Ressources/CSS/Style.css
@@ -6,6 +6,11 @@
         Purpose of the stylesheet follows.
 */
 
+a {
+ text-decoration: none;
+ color:black;
+}
+
 h2{
     margin:0px;
 }
@@ -21,9 +26,10 @@ root {
 
 body {
     margin:0px;
- /*   background: url('../Images/diamond.jpg') no-repeat #e6e6e6; */
-    background-position: center 0px;
-    background-size: 1250px 1250px; 
+    background: linear-gradient(#dbffff,#00546a) ;
+    /* background: url('../Images/Background/bubbles.png'), linear-gradient(#dbffff,#00546a) ; 
+       background-position: center left, center; 
+       background-repeat:no-repeat,no-repeat; */
 }
 
 /* #pub_fond {
@@ -43,6 +49,13 @@ body {
 }
 
 #header_wrapper {
+    background: white; 
+    border-bottom: 10px #008698 solid; 
+    padding-top:10px;
+    box-shadow: 0px 1px 12px #00536a;
+    /*  background: url('../Images/Background/Watert1.jpg') no-repeat;
+      background-position:top center;
+      background-size:100% 100%; */
 }
 
 header{
@@ -51,6 +64,7 @@ header{
     margin-right:auto;
     margin-left:auto;
     background-color:white;
+    box-shadow: 0px 10px 15px grey;
 }
 
 #nav_header{
@@ -60,8 +74,8 @@ header{
 }
 
 #nav_header li { 
-    padding-right:15px;
-    padding-left:15px;
+    padding-right:22px;
+    padding-left:22px;
     height:40px;
     font-weight:bold;
     text-align:center;
@@ -69,11 +83,9 @@ header{
     vertical-align: middle;
 }
 
-#banniere{
+header img#banniere{
     width: 100%;
     height: 170px;
-    background: url('../Images/logo.jpg') no-repeat;
-    background-size:86% 100%;
 }
 
 #rechercher {
@@ -87,14 +99,12 @@ header{
 }
 
 #rechercher .loupe{
-    height:20px;
     vertical-align: middle;
     font-weight: bold;
     font-size:80%;
 }
 
-#rechercher .search{
-    height:14px;   
+#rechercher .search{ 
     text-align:justify;
     width:100px;
     vertical-align: middle;
@@ -126,13 +136,16 @@ header{
     margin-left:auto;
     background-color:white;
     position:relative;
+    top:-10px;
     z-index:999;
+    box-shadow: 0px 10px 15px #00536a;
 }
 
 #submain_pub {   
     width:100%;
-    height:90px;
-    margin-bottom:10px;        
+    height:100px;
+    margin-bottom:10px;
+    padding-top:10px;
     background: url('../Images/Billabong_pub.jpg') no-repeat white;
     background-position: center center;
 }
@@ -169,6 +182,20 @@ header{
     background-color:cadetblue;
     display:none;
     height:25px;
+    color:black;
+    font-weight: bold;
+}
+#sn_reseaux_sociaux {
+    display:inline-block;
+    vertical-align:top;
+    height:25px;
+    margin-left:25px;
+    padding:2px;
+}
+
+#sn_reseaux_sociaux img {
+    width:21px;
+    margin-left:7px;
 }
 
 #ul_multimedia{
@@ -201,8 +228,6 @@ header{
 #article_une_image {
     width:100%;
     height:260px;
-    background: url('../Images/Kelly-Slater-Wins-2014-Volcom-Pipe-Pro.jpeg') no-repeat;
-    background-size:100% 100%;
 }
 
 
@@ -275,8 +300,6 @@ header{
 .article_image {
     width:315px;
     height:200px;
-    background: url('../Images/Snowbird_Ski_Powder_10.jpg') no-repeat;
-    background-size:100% 100%;
     display:inline-block;
     vertical-align:top;
     float:left;
@@ -300,9 +323,9 @@ header{
 }
 
 #login_pub {
-    height:146px;
     width:100%;
     height:100%;
+    text-align:center;
 }
 
 #login fieldset{
@@ -312,12 +335,8 @@ header{
 }
 
 
-#Pub1 {
-    height:250px;
-    margin-bottom:20px;
-    margin-top:20px;
-    background: url('../Images/pub_carre.jpg') no-repeat;
-    background-size:100% 100%;
+#Pub1 img{
+    margin-bottom:10px;
 }
 
 #dossier h2{
@@ -332,16 +351,15 @@ header{
     text-align: center;
 }
 
-.dossier_titre{
-    background-color:grey;
-}
-
-.dossier_titre h3{
+.Dossier h3{
     margin:0px;
+    margin-bottom:5px;
+    background-color:gainsboro;
 }
 
-#submain_section_sport {
-    margin-bottom:5px;    
+.submain_section_sport {
+    margin-bottom:5px;
+    height:490px;
 }
 
 footer {
